@@ -3373,14 +3373,14 @@ object DigIt_Main: TDigIt_Main
     Top = 456
     object MenuItem1: TMenuItem
       Caption = 'Save as Files'
-      GroupIndex = 1
+      GroupIndex = 2
       ImageIndex = 3
       RadioItem = True
       OnClick = MenuItem1Click
     end
     object MenuItem2: TMenuItem
-      Caption = 'Test more'
-      GroupIndex = 1
+      Caption = '   Test more'
+      GroupIndex = 2
       ImageIndex = 2
       RadioItem = True
     end
