@@ -88,5 +88,5 @@
 {"hash":39807138,"name":"tdigit_main.menutimertakestop.caption","sourcebytes":[83,116,111,112,32,84,105,109,101,114],"value":"Stop Timer"},
 {"hash":234671922,"name":"tdigit_main.menutimertakeconfig.caption","sourcebytes":[67,111,110,102,105,103,32,84,105,109,101,114],"value":"Config Timer"},
 {"hash":213947411,"name":"tdigit_main.menuitem1.caption","sourcebytes":[83,97,118,101,32,97,115,32,70,105,108,101,115],"value":"Save as Files"},
-{"hash":174554181,"name":"tdigit_main.menuitem2.caption","sourcebytes":[84,101,115,116,32,109,111,114,101],"value":"Test more"}
+{"hash":138771525,"name":"tdigit_main.menuitem2.caption","sourcebytes":[32,32,32,84,101,115,116,32,109,111,114,101],"value":"   Test more"}
 ]}
