@@ -54,3 +54,5 @@
 11/07/2024 Only one method Take in IDigIt_Taker with DigIt_Taker_TakeAction param; 
            Changed some constant name; More comments
 15/07/2024 Twain use Scanner Default Values when is a new Selection
+16/07/2024 Takers List implementation moved Find method as public; 
+           Taker/Destination MenuItems Checkbox
